--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="frontimg"><h1 class="fronttext">Selamat Datang di Website Saya</h1></div>
     <ul class="nav">
         <li class="icon desktop">
-            <img src="/assets/man.svg" alt="icon">
+            <img src="/LatDeploy/assets/man.svg" alt="icon">
         </li>
         <li><a href="#about-me">About Me</a></li>
         <li><a href="#my-portofolio">My Portofolio</a></li>
@@ -18,19 +18,19 @@
     </ul>
     <div id="about-me">
         <div class="section-intro">
-            <img src="/assets/man.svg" alt="" class="img-icon">
+            <img src="/LatDeploy/assets/man.svg" alt="" class="img-icon">
             <p class="conten-kenalan">
                 Perkenalkan saya Masyuda, seorang Web developer yang berfokus dalam membuat tampilan website yang modern dan responsive
             </p>
         </div>
         <div class="section-edukasi">
-            <img src="/assets/certificate.svg" alt="" class="img-icon">
+            <img src="/LatDeploy/assets/certificate.svg" alt="" class="img-icon">
             <p class="conten-kenalan">
                 Saya telah mengikuti beberapa kelas khusus untuk membuat tampilan web responsive dan telah mempunyai beberapa sertifikat
             </p>
         </div>
         <div class="section-kerja">
-            <img src="/assets/responsive-design.svg" alt="" class="img-icon">
+            <img src="/LatDeploy/assets/responsive-design.svg" alt="" class="img-icon">
             <p class="conten-kenalan">
                 Saya telah mengusasi cara membuat tampilan website dengan menggunakan <b>HTML, CSS dan JavaScript</b> saya juga dapat menggunakan Framework modern seperti <b>Bootstrap</b>
             </p>
@@ -67,19 +67,19 @@
             <h3 class="non-desktop">Ketuk salah satu untuk info lebih</h3>
             <div>
                 <a class="kontak-icon-bundle" href="tel:0822-4797-4294">
-                    <img src="/assets/bxs-phone.svg" class="kontak-icon" alt="">
+                    <img src="/LatDeploy/assets/bxs-phone.svg" class="kontak-icon" alt="">
                     <span class="kontak-desktop">0822-4797-4294</span>
                 </a>
             </div>
             <div>
                 <a class="kontak-icon-bundle" href="mailto:yoeda.79@gmail.com">
-                    <img src="/assets/bxs-envelope.svg" class="kontak-icon" alt="">
+                    <img src="/LatDeploy/assets/bxs-envelope.svg" class="kontak-icon" alt="">
                     <span class="kontak-desktop">yoeda.79@gmail.com</span>
                 </a>
             </div>
             <div>
                 <a class="kontak-icon-bundle" href="https://www.linkedin.com">
-                    <img src="/assets/linkedin.svg" class="kontak-icon-in" alt="">
+                    <img src="/LatDeploy/assets/linkedin.svg" class="kontak-icon-in" alt="">
                     <span class="kontak-desktop">Krisna Masyuda</span>
                 </a>
             </div>
