--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="frontimg"><h1 class="fronttext">Selamat Datang di Website Saya</h1></div>
     <ul class="nav">
         <li class="icon desktop">
-            <img src="/LatDeploy/assets/man.svg" alt="icon">
+            <img src="https://www.flaticon.com/svg/vstatic/svg/3011/3011270.svg?token=exp=1613459405~hmac=5d140ffa31eb61f3e943dd62176c3cee" alt="icon">
         </li>
         <li><a href="#about-me">About Me</a></li>
         <li><a href="#my-portofolio">My Portofolio</a></li>
@@ -18,7 +18,7 @@
     </ul>
     <div id="about-me">
         <div class="section-intro">
-            <img src="/LatDeploy/assets/man.svg" alt="" class="img-icon">
+            <img src="https://www.flaticon.com/svg/vstatic/svg/3011/3011270.svg?token=exp=1613459405~hmac=5d140ffa31eb61f3e943dd62176c3cee" alt="" class="img-icon">
             <p class="conten-kenalan">
                 Perkenalkan saya Masyuda, seorang Web developer yang berfokus dalam membuat tampilan website yang modern dan responsive
             </p>
