--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Test CSS</title>
+    <title>Profile CSS</title>
 </head>
 <body>
     <div class="frontimg"><h1 class="fronttext">Selamat Datang di Website Saya</h1></div>
